# agent-market-signals

./: CHANGELOG.md  Dockerfile  FLYWHEEL.md  LICENSE  README.md  SCHEMA.md  SPEC.md  glama.json  pyproject.toml
.github/ISSUE_TEMPLATE/: field-observation.yml
.github/workflows/: test.yml
AUDITS/: 001-agentpact.md  002-nip90-dvm.md  README.md
agent_market_signals/: __init__.py  __main__.py  detectors.py  observation.py  thresholds.py
agent_market_signals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: boardcheck.js  index.html  llms.txt
examples/: sample_listings.json
tests/: parity_fixtures.json  parity_runner.js  test_cli.py  test_detectors.py  test_mcp_tools.py  test_observation.py  test_parity.py  test_parse_and_render.py  test_thresholds.py
